2018-01-02  Carl Hetherington  <cth@carlh.net>

	* Fix downloading of certificates on Windows (#1124).

	* Version 2.11.34 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.33 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.32 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Allow CLI KDM generator to make KDMs from DKDMs (#1132).

2017-12-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.31 released.

2017-12-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.30 released.

2017-12-17  Carl Hetherington  <cth@carlh.net>

	* Add Close option to player.

	* Display decode resolution in the player.

2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.29 released.

2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.28 released.

2017-11-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2017-10-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.27 released.

2017-10-13  Carl Hetherington  <cth@carlh.net>

	* Colour axis labels in the audio plot (#835).

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.26 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.25 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2017-10-05  Carl Hetherington  <cth@carlh.net>

	* Add config option to control writer's
	maximum_frames_in_memory.

2017-10-04  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

2017-10-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.24 released.

2017-09-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.23 released.

2017-09-20  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-09-03  Carl Hetherington  <cth@carlh.net>

	* Make Cmd+W work on OS X (#934).
